--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <scala.version>2.11.7</scala.version>
+        <scala.version>2.10.3</scala.version>
+        <scalatest.version>2.0.M5b</scalatest.version>
     </properties>
 
     <dependencies>
@@ -43,8 +44,8 @@
 
         <dependency>
             <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_2.11</artifactId>
-            <version>2.2.4</version>
+            <artifactId>scalatest_2.10</artifactId>
+            <version>2.1.5</version>
             <scope>test</scope>
         </dependency>
 
